//
// Created by Filipe on 20/12/2025.
//

#ifndef LETI_ESOFT_25_26_B1_SNSUSERDTO_H
#define LETI_ESOFT_25_26_B1_SNSUSERDTO_H

#pragma once
#include <string>

struct SNSUserDto {
    std::string name;
    std::string snsUserNumber;
};


#endif //LETI_ESOFT_25_26_B1_SNSUSERDTO_H
