@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

' ===== DTO =====
class SNSUserDTO {
  - name : string
  - dateOfBirth : string
  - sex : string
  - postalAddress : string
  - phoneNumber : string
  - email : string
  - citizenCardNumber : string
  - snsUserNumber : string
}

' ===== UI Layer =====
class RegisterSNSUserView {
}

class RegisterSNSUserController {
  + registerSNSUser(dto : SNSUserDTO) : Result
  + getAll() : vector<shared_ptr<SNSUser>>
}

class App {
  + getSNSUserService() : SNSUserService
 }

RegisterSNSUserView ..> RegisterSNSUserController
RegisterSNSUserController ..> SNSUserDTO

' ===== Service Layer =====
class SNSUserService {
  + SNSUserService(SNSUserRepository repo)
  + create(string name, string dateOfBirth, string sex, string postalAddress, string phoneNumber, string email, string citizenCardNumber, string snsUserNumber) : SNSUser
  + addOrUpdate(SNSUser obj) : Result
  + list() : vector<shared_ptr<SNSUser>>
}

RegisterSNSUserController ..> SNSUserService

' ===== Repository Interfaces =====
interface SNSUserRepository <<interface>> {
  + save(SNSUser obj) : Result
  + findAll() : vector<shared_ptr<SNSUser>>
  + existsByPhoneNumber(phoneNumber : string) : bool
  + existsByEmail(email : string) : bool
  + existsByCitizenCardNumber(cc : string) : bool
  + existsBySNSUserNumber(number : string) : bool
}

' ===== Concrete Repositories =====
class SNSUserMemoryRepository {
  + save(SNSUser obj) : Result
  + findAll() : vector<shared_ptr<SNSUser>>
  + existsByPhoneNumber(phoneNumber : string) : bool
  + existsByEmail(email : string) : bool
  + existsByCitizenCardNumber(cc : string) : bool
  + existsBySNSUserNumber(number : string) : bool
}
SNSUserMemoryRepository .up.|> SNSUserRepository

' ===== Repository Factory =====
interface RepositoryFactory <<interface>> {
  + getSNSUserRepository() : SNSUserRepository
}

class MemoryRepositoryFactory {
  + getSNSUserRepository() : SNSUserRepository
}
MemoryRepositoryFactory .up.|> RepositoryFactory
MemoryRepositoryFactory .right.> SNSUserMemoryRepository

App "1" -down-> "1" RepositoryFactory : uses
App --> SNSUserService : adopts
RepositoryFactory ..> SNSUserRepository
SNSUserService ..> SNSUserRepository

' ===== Domain Model =====
class SNSUser {
  - name : string
  - dateOfBirth : string
  - sex : string
  - postalAddress : string
  - phoneNumber : string
  - email : string
  - citizenCardNumber : string
  - snsUserNumber : string
  + getName() : string
  + getDateOfBirth() : string
  + getSex() : string
  + getPostalAddress() : string
  + getPhoneNumber() : string
  + getEmail() : string
  + getCitizenCardNumber() : string
  + getSNSUserNumber() : string
}

SNSUserRepository "1" --> "0..*" SNSUser : records >

@enduml
